# quadcopter-dsp

./: .gitignore  README.md
fc-stm32/: Makefile  STM32Make.make  fc-stm32.ioc
fc-stm32/Core/Inc/: main.h  motors.h  mpu6050.h  nrf24l01.h  stm32f1xx_hal_conf.h  tim.h
fc-stm32/Core/Src/: i2c.c  main.c  nrf24l01.c  spi.c  tim.c
fc-stm32/EWARM/: stm32f103x6_flash.icf  stm32f103x6_sram.icf
firmware/fc-stm32/: .gitignore  .mxproject  CMakeLists.txt  Makefile  STM32-for-VSCode.config.yaml  STM32F103C6Tx_FLASH.ld  STM32Make.make  cmakeLists-old.txt  fc-stm32.ioc  functions.cmake  gcc-arm-none-eabi.cmake  requirements.txt
firmware/fc-stm32/Core/Inc/: flight_controller.h  logger.h  main.h  motors.h  mpu6050.h  my_sprintf.h  nrf24l01.h  rc.h  sprintf_opt.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
firmware/fc-stm32/Core/Inc/app/: imu.h  memory.h  radio.h
firmware/fc-stm32/Core/Inc/drivers/: bmp280.h  flash_memory.h  ibus.h  motors.h  mpu6050.h  nrf24l01.h  w25q64.h  w25qxxConf.h
firmware/fc-stm32/Core/Inc/dsp/: angle_estimation.h  brushed_motors.h  filters.h  pid.h  rc.h  stabilizer.h
firmware/fc-stm32/Core/Inc/hal/: stm32f1xx_hal_conf.h
firmware/fc-stm32/Core/Inc/navi_hal/: baro.h  config.h  external_memory.h  imu.h  navi.h  radio.h
firmware/fc-stm32/Core/Src/: dma.c  flight_controller.c  gpio.c  i2c.c  logger.c  main.c  motors.c  mpu6050.c  my_sprintf.c  nrf24l01.c  rc.c  spi.c  sprintf_opt.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c
firmware/fc-stm32/Core/Src/drivers/: bmp280.c  flash_memory.c  ibus.c  motors.c  mpu6050.c  nrf24l01.c  w25q64.c
firmware/fc-stm32/Core/Src/dsp/: angle_estimation.c  filters.c  pid.c  stabilizer.c
firmware/fc-stm32/Core/Src/hal/: dma.c  gpio.c  spi.c  stm32f1xx_it.c
firmware/fc-stm32/Core/Src/navi_hal/: baro.c  external_memory.c  imu.c  navi.c  radio.c
firmware/fc-stm32/Devices/Debug/: openocd.cfg
firmware/fc-stm32/Drivers/STM32F1xx/Inc/: stm32f1xx_it.h
firmware/fc-stm32/Drivers/STM32F1xx_HAL_Driver/: CMakeLists.txt
firmware/fc-stm32/EWARM/: Project.eww  fc-stm32.ewd  fc-stm32.ewp
firmware/fc-stm32/HAL_Flight_Controller/: hal_imu.h  hal_motors.h  hal_radio.h
firmware/fc-stm32/HAL_Flight_Controller/MPU6050/: CMakeLists.txt  hal_imu.c  imu.c  mpu6050.c  mpu6050.h
firmware/fc-stm32/HAL_Flight_Controller/NRF24L01/: CMakeLists.txt  hal_radio.c  nrf24l01.c  nrf24l01.h  radio.c
firmware/fc-stm32/HAL_STM32/STM32F1xx/Inc/: main.h
firmware/fc-stm32/HAL_STM32/STM32F1xx/Src/: dma.c  gpio.c  i2c.c  spi.c  stm32f1xx_it.c  usart.c
firmware/fc-stm32/HAL_STM32/STM32F1xx_HAL_Driver/: CMakeLists.txt
firmware/fc-stm32/HAL_STM32/STM32F7xx/Inc/: main.h  quadspi.h  spi.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  usart.h
firmware/fc-stm32/HAL_STM32/STM32F7xx/Src/: gpio.c  i2c.c  quadspi.c  spi.c  stm32f7xx_hal_msp.c  usart.c  usb_otg.c
firmware/fc-stm32/USB_DEVICE/App/: usbd_desc.c
firmware/fc-stm32/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  quadcopter_dsp.map
firmware/radio/: platformio.ini  serial_test.py
firmware/radio/src/: test.ino
firmware/tests/motors_test/: .mxproject  Makefile  STM32-for-VSCode.config.yaml
firmware/tests/nrf29l01_test/: Makefile
firmware/tests/usb_test/: .mxproject  Makefile  STM32-for-VSCode.config.yaml  usb_test.ioc
hardware/quadcopter-flight-controller-v0.2/: fp-lib-table  quadcopter-flight-controler.kicad_pcb  quadcopter-flight-controler.kicad_prl  quadcopter-flight-controler.kicad_pro
hardware/quadcopter-flight-controller-v0.2/gerber/: quadcopter-flight-controler-B_Cu.gbr  quadcopter-flight-controler-B_Mask.gbr  quadcopter-flight-controler-B_Silkscreen.gbr  quadcopter-flight-controler-Edge_Cuts.gbr  quadcopter-flight-controler-F_Cu.gbr  quadcopter-flight-controler-NPTH.drl
hardware/quadcopter-flight-controller-v0.2/spice-models/: DMN2056U.lib  flight-controller-simulation-DC-motor.wbk
motors_test/: STM32Make.make  motors_test.ioc
motors_test/Core/Src/: gpio.c  tim.c
nrf29l01_test/: .mxproject  STM32Make.make  openocd.cfg
nrf29l01_test/Core/Src/: gpio.c  main.c
python/: controller.py
quadcopter-flight-controler-v0.1/: fp-info-cache  quadcopter-flight-controler.kicad_pcb  quadcopter-flight-controler.kicad_prl  quadcopter-flight-controler.kicad_pro  quadcopter-flight-controler.kicad_sch  ~flight-controller-simulation.kicad_sch.lck
quadcopter-flight-controler-v0.1/libs/QT532S-8.000MAAJ-T/: QT532S-8.000MAAJ-T.step
quadcopter-flight-controler-v0.1/spice-models/: mosfets_n-channel_n-channel-20v.lib
quadcopter-flight-controller-v0.2/: flight-controller-simulation-DC-motor.wbk  flight-controller-simulation.kicad_prl  flight-controller-simulation.kicad_pro  flight-controller-simulation.kicad_sch  fp-info-cache  quadcopter-flight-controler.kicad_pcb  quadcopter-flight-controler.kicad_sch
quadcopter-flight-controller-v0.2/gerber/: quadcopter-flight-controler-B_Paste.gbr  quadcopter-flight-controler-F_Mask.gbr  quadcopter-flight-controler-F_Paste.gbr  quadcopter-flight-controler-F_Silkscreen.gbr  quadcopter-flight-controler-In1_Cu.gbr  quadcopter-flight-controler-In2_Cu.gbr  quadcopter-flight-controler-PTH.drl  quadcopter-flight-controler-job.gbrjob
quadcopter-flight-controller-v0.2/libs/10118193-0001LF/: 10118193-0001LF.kicad_sym
quadcopter-flight-controller-v0.2/libs/826926-6/: 826926-6.kicad_sym
quadcopter-flight-controller-v0.2/libs/QT532S-8.000MAAJ-T/: QT532S-8.000MAAJ-T.kicad_sym
quadcopter-flight-controller-v0.2/spice-models/: AO3414.lib  DMN2024U.lib  flight-controller-simulation.wbk
quadcopter-flight-controller-v0.2/swd_conn.pretty/: Pin_2x03_P2.54mm.kicad_mod
software/: flight1.csv  flight2.csv  flight4.csv  flight5.csv  sample0  sample1-filtered-10Hz
software/calculations/: 00-ema-filter.ipynb
software/gamepad/: controller.py  logger.py  requirements.txt  unit-tests.py
software/scripts/dsp/: Angle-estimation.py  AttitudeEstimation.ipynb  EMA.ipynb  IIR.ipynb  data-analisis.ipynb  filters.py  (+2 more)
tests/nrf29l01_test/: STM32-for-VSCode.config.yaml  STM32F429ZITx_FLASH.ld  nrf29l01_test.ioc
usb_test/: STM32Make.make
(+20 files in other folders)
